# Project

./: .gitignore  GUI_IMPLEMENTATION_COMPLETE.md  README.md  VISUALIZATION_SETUP_COMPLETE.md  arm_rl_architecture.html  arm_rl_flowchart.html  claude.md  progress.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rl_intro.html
.claude/: launch.json
arm_configuration/: ARM_1.json  ARM_1_3D.json
docs/: GYMNASIUM_GUIDE.md  VISUALIZATION_GUIDE.md  generate_fischer_implementation_report.py  generate_progress_report.py
docs/references/: README.md  generate_reference_report.py
project_assets/examples/: demo_task_env.py  examples_gymnasium.py
project_assets/outputs/Results/: ppo_model_metadata.pkl  training_history.csv  training_stats.json
project_assets/outputs/Results/PPO_train_west_model_1/: training_stats.json
project_assets/outputs/Results/Ranjot's Results/: ppo_model_metadata.pkl  training_history.csv  training_stats.json
project_assets/outputs/Results/ppo_east_3d_1/: training_stats.json
project_assets/outputs/Results/ppo_north_1/: training_stats.json
project_assets/outputs/Results/sac_east_model_1/: training_stats.json
project_assets/outputs/Results/train_2/: training_stats.json  trial_run_1.json
project_assets/test_runs/: ppo_north_run_1.json  ppo_west_run_1.json  sac_model_run_1.json  test_parallel_interactive_dashboard.html  test_visualization_standalone.py
project_assets/tests/: __init__.py  test_data.py  test_gui_components.py  test_models.py  test_parallel_env.py  test_task_env.py  test_visualization.py
src/rl_armMotion/: __init__.py  config.py
src/rl_armMotion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_armMotion/data/: __init__.py
src/rl_armMotion/environments/: __init__.py  simple_arm.py  task_env.py  weng_gait_env.py
src/rl_armMotion/gui/: __init__.py  app.py  training_gui.py
src/rl_armMotion/models/: __init__.py  callbacks.py  trainers.py
src/rl_armMotion/models/agents/: __init__.py  a3c_agent.py  ppo_agent.py  sac_agent.py
src/rl_armMotion/three_d/: __init__.py
src/rl_armMotion/three_d/config/: __init__.py  arm_config_3d.py
src/rl_armMotion/three_d/environments/: __init__.py  (+1 more)
src/rl_armMotion/training/: __init__.py  compare_algorithms.py  ppo_trainer_wrapper.py  weng_gait_trainer.py
src/rl_armMotion/two_d/: __init__.py
src/rl_armMotion/utils/: __init__.py  arm_kinematics.py  parallel_env.py  visualization.py
(+35 files in other folders)
